@@ -1,5 +1,6 @@
 2.1: 6/??/2024
 	* Fixed a problem when reading file headers and getting null twice.
+	* Fixed a possible problem when the internal buffer sizes are increasing.
 
 2.0: 6/13/2024
 	* Fixed problem with buffering that would generate an improper or unnecessary data-descriptor.
